--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "git+https://github.com/cristhina23/crisschat2.0.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "viszelle Cristhina Chacon",
   "license": "ISC",
   "type": "commonjs",
   "bugs": {
