--- a/package.json
+++ b/package.json
@@ -1,22 +1,30 @@
 {
-  "name": "crisschat2.0",
+  "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
-    "start": "npm run start --prefix backend "
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/cristhina23/crisschat2.0.git"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
-  "author": "viszelle Cristhina Chacon",
+  "author": "",
   "license": "ISC",
-  "type": "commonjs",
-  "bugs": {
-    "url": "https://github.com/cristhina23/crisschat2.0/issues"
+  "type": "module",
+  "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.7.0",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "crisschat2.0": "file:..",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.19.1",
+    "socket.io": "^4.8.1"
   },
-  "homepage": "https://github.com/cristhina23/crisschat2.0#readme"
+  "devDependencies": {
+    "nodemon": "^3.1.10"
+  }
 }
