--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-     "dev": "nodemon backend/server.js",
-    "start": "node backend/server.js",
-    "build": "npm install  && npm install --prefix frontend && npm run build --prefix frontend"
-  },
+  "dev": "nodemon backend/server.js",
+  "start": "node backend/server.js",
+  "build": "npm install --prefix frontend && npm run build --prefix frontend"
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
